2004-03-25  Federico Mena Quintero  <federico@ximian.com>

	* gtk/gtkfilechooserdefault.c (location_entry_create): Fill the
	location entry with the display name of the file under the cursor
	for Open mode, or the typed filename in Save mode.

2004-03-24  J. Ali Harlow  <ali@juiblex.co.uk>

	* gtk/gtkfilesystemwin32.c
	(filename_is_root): Bare drive designators (eg., "c:") are
	no longer considered as root filenames.  Fixed #137942

2004-03-24  J. Ali Harlow  <ali@juiblex.co.uk>

	* gtk/gtkfilesystemwin32.c
	(gtk_file_system_win32_create_folder): Invert test for error in
	mkdir.  Fixes #137945

2004-03-24  J. Ali Harlow  <ali@juiblex.co.uk>

	Fixed #138004 using Federico's code from #132327.

	* gtk/gtkfilesystemwin32.c (struct _GtkFileSystemWin32): Add a
	folder_hash field to keep a list of live folder objects.
	(gtk_file_system_win32_init): Create the folder_hash.
	(gtk_file_system_win32_finalize): Destroy the folder_hash.
	(gtk_file_system_win32_get_folder): Ref and return an existing
	folder if we have it around, otherwise return a new folder object.
	(struct _GtkFileFolderWin32): Add a field for the parent file system.
	(gtk_file_folder_win32_finalize): Remove the folder from the file
	system's hash table.
	(gtk_file_system_win32_create_folder):  Emit "files-added" on the
	newly-created folder's parent.  Fixes #138004.

2004-03-24  J. Ali Harlow  <ali@juiblex.co.uk>

	* gtk/gtkfilesystemwin32.c
	(gtk_file_system_win32_get_folder): Test that path is actually
	a directory and throw error if not. Fixed bug #137950

2004-03-22  J. Ali Harlow  <ali@juiblex.co.uk>

	* gtk/gtkfilesystemwin32.c
	(gtk_file_system_win32_volume_get_display_name): Ignore empty
	volume labels; assume that GetVolumeInformation would fail if
	GetVolumeInformationW does; catches a small memory leak;
	pass the buffer size to GetVolumeInformationW in wide
	characters instead of bytes. Fixes bug #137543
	(list_volumes): Cope with the theoretical possibility of