@@ -1,5 +1,11 @@
 2004-03-25  Federico Mena Quintero  <federico@ximian.com>
 
+	* gtk/gtkfilechooserdefault.c (check_preview_change): Just use the
+	file under the cursor; we don't need the logic from
+	GtkFileSelection after all.  Fixes #132255.
+
+2004-03-25  Federico Mena Quintero  <federico@ximian.com>
+
 	* gtk/gtkfilechooserdefault.c (location_entry_create): Fill the
 	location entry with the display name of the file under the cursor
 	for Open mode, or the typed filename in Save mode.
